--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "ftp-web"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 repository = "https://github.com/ahaoboy/ftp-web"
 homepage = "https://github.com/ahaoboy/ftp-web"
@@ -9,6 +9,7 @@ license = "MIT"
 description = "ftp-web"
 
 [dependencies]
+bytesize ="1.3.0"
 suppaftp = "6"
 regex = "1.5"
 axum = "0.7"
